# metaRTC

./: .gitattributes  .gitignore  LICENSE  README.en.md  README.md  cmake_lib_android.sh  cmake_lib_ios.sh  cmake_lib_x64.sh  yang_config.ini
demo/libmetaCApp/: CMakeLists.txt  cmake_android.sh
demo/metaipc6_jz/: CMakeLists.txt  mips32.cmake
demo/metaipc6_rk1109/: CMakeLists.txt
demo/metaplayer7_flutter/: CMakeLists.txt  cmake_x64.sh  yang_config.ini
demo/metaplayer7_flutter/metaplayer7/: YangMetaplayer.cpp  YangMetaplayer.h  YangPlayDef.h  YangPlayerHandleImpl.cpp  YangPlayerHandleImpl.h  YangRtcReceive.cpp  YangRtcReceive.h
demo/metaplayer7_flutter/metaplayer7_flutter/: README.md  pubspec.yaml
demo/metaplayer7_lvgl/: CMakeLists.txt  YangLvglDef.h  YangMetaplayer.cpp  YangMetaplayer.h  cmake_x64.sh  main.cpp  yangrecordthread.cpp  yangrecordthread.h
demo/metaplayer7_lvgl/liblvgl/: CMakeLists.txt  cmake_x64.sh  lv_conf.h  lv_drv_conf.h
demo/metaplayer7_lvgl/yangplayer/: YangPlayFactory.cpp  YangPlayerHandleImpl.cpp  YangPlayerHandleImpl.h  YangRtcReceive.cpp  YangRtcReceive.h
demo/metapushstream7/: CMakeLists.txt  Info.plist  Info.plist.in  main.cpp  metapushstream7.pro  moc_YangYuvPlayWidget.cpp  moc_recordmainwindow.cpp  moc_yangjanus.cpp  moc_yangrecordvideowin.cpp  recordmainwindow.cpp  recordmainwindow.h  ui_recordmainwindow.h  ui_yangjanus.h
demo/metapushstream7/metapushstream7.xcodeproj/: project.pbxproj  qt_makeqmake.mak  qt_preprocess.mak
demo/metapushstream7/video/: YangPlayWidget.h  YangYuvPlayWidget.cpp  yangrecordthread.cpp  yangrecordthread.h
demo/metapushstream7/yangpush/: YangPushCapture.cpp  YangPushEncoder.cpp  YangPushHandleImpl.cpp  YangPushHandleImpl.h  YangPushPublish.cpp  YangRtcPublish.cpp
libmetaiot5/: CMakeLists.txt  metaiot5.pro
libmetartc2/: CMakeLists.txt  metartc2.pro
libmetartc2/src/yangaudiodev/: YangAudioCapture.cpp  YangAudioCaptureData.cpp  YangAudioCaptureHandle.cpp  YangAudioCaptureHandle.h  YangAudioPlay.cpp  YangAudioRenderData.cpp  YangCaptureCallback.h
libmetartc2/src/yangavutil/: YangAecBase.cpp  YangAecSpeex.cpp  YangAecSpeex.h  YangAudioFactory.cpp  YangAudioMix.cpp  YangAudioUtil.cpp  YangConvert.cpp  YangImageConvert.cpp  YangImageConvert.h  YangMakeWave.cpp  YangMeta.cpp  YangNalu.cpp  YangPicUtilFfmpeg.cpp  YangPreProcess.cpp  YangPreProcessSpeex.cpp  YangPreProcessSpeex.h  YangResample.cpp  YangSwResample.cpp  YangVideoEncoderMeta.cpp  YangYuvConvert.cpp  YangYuvUtil.cpp
libmetartc2/src/yangcapture/: YangAudioDeviceQuery.cpp  YangCaptureFactory.cpp  YangDXGIManager.cpp  YangDXGIManager.h  YangScreenCaptureImpl.cpp  YangScreenCaptureImpl.h  YangScreenShare.cpp  YangScreenShare.h  YangVideoCapture.cpp  YangVideoCaptureHandle.cpp  YangVideoCaptureHandle.h  YangVideoCaptureImpl.cpp  YangVideoCaptureImpl.h  YangVideoDeviceQuery.cpp  YangVideoDeviceQuery.h
libmetartc2/src/yangdecoder/: YangAudioDecoder.cpp  YangAudioDecoderAac.cpp  YangAudioDecoderAac.h  YangAudioDecoderHandle.cpp  YangAudioDecoderHandles.cpp  YangAudioDecoderOpus.cpp  YangAudioDecoderOpus.h  YangAudioDecoderSpeex.cpp  YangAudioDecoderSpeex.h  YangDecoderFactory.cpp  YangH2645VideoDecoderFfmpeg.cpp  YangH2645VideoDecoderFfmpeg.h  YangH264Dec.h  YangH264DecoderSoft.cpp  YangH264DecoderSoft.h  YangH264DecoderSoftFactory.h  YangH264Header.cpp  YangH264Header.h  YangH264Header1.h  YangHeaderParseFfmpeg.cpp  YangHeaderParseFfmpeg.h  YangVideoDecoderHandle.cpp  YangVideoDecoderHandles.cpp  YangVideoDecoderIntel.cpp  YangVideoDecoderIntel.h
libmetartc2/src/yangencoder/: YangAudioEncoder.cpp  YangAudioEncoderAac.cpp  YangAudioEncoderAac.h  YangAudioEncoderHandle.cpp  YangAudioEncoderHandleCb.cpp  YangAudioEncoderMeta.cpp  YangAudioEncoderMp3.cpp  YangAudioEncoderMp3.h  YangAudioEncoderOpus.cpp  YangAudioEncoderOpus.h  YangAudioEncoderSpeex.cpp  YangAudioEncoderSpeex.h  YangEncoderFactory.cpp  YangFfmpegEncoderMeta.cpp  YangFfmpegEncoderMeta.h  YangH264EncHeader.cpp  YangH264EncHeader.h  YangH264EncoderIntel.cpp  YangH264EncoderIntel.h  YangH264EncoderIntel1.h  YangH264EncoderMeta.cpp  YangH264EncoderMeta.h  YangH264EncoderSoft.cpp  YangH264EncoderSoft.h  YangH265EncoderMeta.cpp  YangH265EncoderMeta.h  YangH265EncoderSoft.cpp  YangH265EncoderSoft.h  YangVideoEncoder.cpp  YangVideoEncoderFfmpeg.cpp  YangVideoEncoderFfmpeg.h  YangVideoEncoderHandle.cpp
libmetartc2/src/yangplayer/: YangPlayFactory.cpp  YangPlayReceive.cpp  YangPlayerBase.cpp  YangPlayerDecoder.cpp  YangPlayerHandleImpl.cpp  YangPlayerHandleImpl.h  YangPlayerPlay.cpp  YangRtcReceive.cpp  YangRtcReceive.h
libmetartc2/src/yangpush/: YangPushCapture.cpp  YangPushEncoder.cpp  YangPushEncoder.h  YangPushFactory.cpp  YangPushHandleImpl.cpp  YangPushHandleImpl.h  YangPushMessageHandle.cpp  YangPushMessageHandle.h  YangPushPublish.cpp  YangRtcPublish.cpp  YangSendVideoImpl.cpp  YangSendVideoImpl.h
libmetartc2/src/yangrecord/: YangFlvWrite.cpp  (+9 more)
libmetartc7/: CMakeLists.txt  cmake_android.sh  cmake_ios64.sh  cmake_x64.sh  ios64.cmake  metartc7.pro
libmetartc7/metartc7.xcodeproj/: project.pbxproj  qt_makeqmake.mak  qt_preprocess.mak
libmetartc7/project_win/: libmetartc7.sln  metartc7.vcxproj
libmetartccore5/: CMakeLists.txt  cmake_android.sh  cmake_mips32.sh  metartccore5.pro  mips32.cmake
libmetartccore7/: CMakeLists.txt  cmake_android.sh  cmake_ios64.sh  cmake_x64.sh  metartccore7.pro
libmetartccore7/metartccore7.xcodeproj/: project.pbxproj  qt_makeqmake.mak  qt_preprocess.mak
libmetartccore7/project_win/: libmetartccore7.sln  metartccore7.vcxproj
libyangutil8/: CMakeLists.txt  cmake_android.sh  cmake_build.sh  yangutil8.pro
libyangutil8/project_win/: yangutil8.vcxproj
libyangwhip8/: CMakeLists.txt  cmake_android.sh  cmake_build.sh  yangwhip8.pro
libyangwhip8/project_win/: yangwhip8.vcxproj
metaipc5/: CMakeLists.txt  cmake_arm.sh  cmake_x64.sh
metaipc5/src/: YangIpc.cpp  YangIpc.h  main.cpp
metaipc5_jz/: CMakeLists.txt
metaspeexdsp/: CMakeLists.txt  aarch64.cmake  cmake_android.sh  speexdsp.pro
metaspeexdsp/src/: Makefile.am  config.h  resample.c
(+3195 files in other folders)
